--- a/index.html
+++ b/index.html
@@ -211,6 +211,12 @@
         <button>Hover Me</button>
     </div>
 
+    <!-- Flex box -->
+
+    <section class="flex">
+
+    </section>
+
 
 </body>
 
