--- a/index.html
+++ b/index.html
@@ -93,6 +93,17 @@
 
     <hr>
 
+    <!-- Flex box -->
+
+    <section class="flex">
+        <div class="flexbox flex1"></div>
+        <div class="flexbox flex2"></div>
+        <div class="flexbox flex3"></div>
+        <div class="flexbox flex4"></div>
+        <div class="flexbox flex5"></div>
+    </section>
+
+
     <!-- Forms -->
     <h4>Forms</h4>
 
@@ -210,12 +221,10 @@
     <div class="button">
         <button>Hover Me</button>
     </div>
-
-    <!-- Flex box -->
-
-    <section class="flex">
-
-    </section>
+    <br>
+    <br>
+    <br>
+    <hr>
 
 
 </body>
